# LIV

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README.md
cmake/: LIVFunctions.cmake  PreventInSourceBuilds.cmake
examples/main/: CMakeLists.txt  main.cpp
include/LIV/: liv.h
source/: CMakeLists.txt
source/LIV/: CMakeLists.txt  liv.cpp
